Add UI layer with title, description, and control buttons

--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
 </head>
 <body>
   <div id="root"></div>
+      <div class="ui-container">
+      <div class="title-section">
+        <h1 id="aethel-title">Aethel Engine</h1>
+        <p id="aethel-desc">A personalized 3D romantic digital archive with tactile mechanisms</p>
+      </div>
+      <div class="controls-section">
+        <button class="btn-explore">Explore Archive</button>
+        <button class="btn-about">About</button>
+      </div>
+    </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
   <script src="app.js"></script>
 </body>
