--- a/index.html
+++ b/index.html
@@ -1,24 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Eternal Archive - A Digital Love Story</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <div id="root"></div>
-      <div class="ui-container">
-      <div class="title-section">
-        <h1 id="aethel-title">Aethel Engine</h1>
-        <p id="aethel-desc">A personalized 3D romantic digital archive with tactile mechanisms</p>
-      </div>
-      <div class="controls-section">
-        <button class="btn-explore">Explore Archive</button>
-        <button class="btn-about">About</button>
-      </div>
-    </div>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-  <script src="app.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Aethel Engine - Eternal Archive</title>
+    <style>
+      * { margin: 0; padding: 0; box-sizing: border-box; }
+      body { font-family: 'Courier New', monospace; background: #0a0e27; color: #e0e0e0; overflow: hidden; }
+      #root { width: 100vh; height: 100vh; }
+    </style>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
